Fixed the linkes not showing in the production version of the website

--- a/src/components/navbar/Links/Links.scss
+++ b/src/components/navbar/Links/Links.scss
@@ -55,13 +55,15 @@
 }
 
 #appear{
+
     right:0;
+
     #link-1,
     #link-2,
     #link-3,
     #link-4{
         margin-right: 0;
-        opacity: 100%;
+        opacity: 1;
     }
 }
 
